--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -19,11 +19,12 @@ jobs:
   - script: |
       . $CONDA/etc/profile.d/conda.sh
       conda activate debug
-      conda install -y -q numpy scipy mkl openblas theano
-      theano-cache purge
+      conda install -y -q numpy scipy mkl openblas
       pip install -U pip
       pip install -U setuptools
       pip install -U pytest nose
+      pip install theano==1.0.4
+      theano-cache purge
     displayName: 'Install dependencies'
 
   - script: |
