--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -2,7 +2,7 @@ jobs:
 - job: Default
   timeoutInMinutes: 90
   pool:
-    vmImage: Ubuntu-16.04
+    vmImage: ubuntu-18.04
   steps:
 
   - script: |
@@ -19,12 +19,11 @@ jobs:
   - script: |
       . $CONDA/etc/profile.d/conda.sh
       conda activate debug
-      conda install -y -q numpy scipy mkl openblas
+      conda install -y -q numpy scipy mkl openblas theano
+      theano-cache purge
       pip install -U pip
       pip install -U setuptools
       pip install -U pytest nose
-      pip install theano==1.0.4
-      theano-cache purge
     displayName: 'Install dependencies'
 
   - script: |
