--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -19,7 +19,7 @@ jobs:
   - script: |
       . $CONDA/etc/profile.d/conda.sh
       conda activate debug
-      conda install -y -q numpy scipy mkl=2020.1 openblas=0.3.6 theano
+      conda install -y -q numpy scipy mkl=2020.1 openblas theano
       theano-cache purge
       pip install -U pip
       pip install -U setuptools
